fixed (inc)restart hangman

--- a/swiftApp/Views/hangman.storyboard
+++ b/swiftApp/Views/hangman.storyboard
@@ -54,15 +54,8 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmc-Tk-JBu">
-                                <rect key="frame" x="80" y="476" width="249" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="27"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqh-Sf-bhT">
-                                <rect key="frame" x="71" y="554" width="266" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqh-Sf-bhT">
+                                <rect key="frame" x="340" y="62" width="57" height="390"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="30"/>
                                 <nil key="textColor"/>
@@ -73,9 +66,6 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="input:" destination="L0o-Ar-oV5" eventType="editingDidEnd" id="2go-eM-iRv"/>
-                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="abo-WI-jMC">
                                 <rect key="frame" x="177" y="738" width="54" height="42"/>
@@ -88,6 +78,25 @@
                                     <action selector="inpu:" destination="L0o-Ar-oV5" eventType="touchUpInside" id="ENk-cp-ymh"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Lq-Qo-KRs">
+                                <rect key="frame" x="167" y="563" width="72" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="23"/>
+                                <state key="normal" title="Restart">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="inpu:" destination="L0o-Ar-oV5" eventType="touchUpInside" id="wS9-VP-JrI"/>
+                                    <action selector="restartButto:" destination="L0o-Ar-oV5" eventType="touchUpInside" id="gFh-xc-3zG"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmc-Tk-JBu">
+                                <rect key="frame" x="53" y="476" width="317" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="27"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="MtE-Gn-zc4"/>
@@ -98,6 +107,7 @@
                         <outlet property="inputField" destination="QQY-dB-UI0" id="W7E-hy-Nfc"/>
                         <outlet property="leftArm" destination="rKz-FB-a8z" id="8rS-D0-11U"/>
                         <outlet property="leftLeg" destination="X5z-k7-2Oi" id="7UE-Zp-E5j"/>
+                        <outlet property="restartButton" destination="0Lq-Qo-KRs" id="4da-lD-LrC"/>
                         <outlet property="rightArm" destination="ZI0-BT-rkB" id="271-u5-9u9"/>
                         <outlet property="rightLeg" destination="qYj-4d-fGQ" id="kSn-13-cp3"/>
                         <outlet property="usedLettersLabel" destination="tqh-Sf-bhT" id="pez-Bp-PlH"/>
